# connect4

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
connect4/: __init__.py  __main__.py  board.py  cli.py  evaluation.py  game.py  renderer.py  types.py
connect4/players/: __init__.py  base.py  greedy.py  human.py  minimax.py  random.py  weakc4.py
docs/: design.md  implementation-plan.md
docs/superpowers/plans/: 2026-04-12-connect4-implementation.md
docs/superpowers/specs/: 2026-04-12-connect4-design.md
scripts/: benchmark_depth.py
tests/: conftest.py  test_board.py  test_bot_strength.py  test_cli.py  test_e2e.py  test_evaluation.py  test_game.py  test_greedy_player.py  test_human_player.py  test_known_positions.py  test_minimax.py  test_random_player.py  test_renderer.py  test_types.py
